parameter rework, logging and exception handling